      text must be hardcoded.  i.e {content_text text='This is a test'}
  - FEATURE: Added the {assets_url} plugin to provide the complete URL to the assets folder.
  - FEATURE: added the CMS_ASSETS_URL define and assets_url config entry.
  - New cleaned up simplex theme on initial install
  - New default content on initial install

News v2.21.5
  - Minor cleaning of parameters.

CMSContentManager - 1.2
  - REMOVED: Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - FEATURE:Adds expand/functionality into reorder content (TODO: needs styling)
  - FEATURE: Adds new 'add child here' icon in the content list.
  - FEATURE: Find functionality in content list can now search on page alias and url.
  - FEATURE: Allow setting the default content page from within the page edit form (for pages where it is possible, and permission allows)
  - FEATURE: New bulk action for when page_template_list is correctly defined in the config to allow setting bulk pages to a template resource.
  - FEATURE: When page_template_list is defined hide the set design and template bulk action

Installation Assistant - v1.4
  - Now require at least version 2.0.1 to upgrade
  - Now test the default character set
  - Now require at least PHP 7.0 and recommend 7.1
  - Upgrade to smarty v3.1.32
  - CURL is now a requirement
  - ZipArchive is now a requirement (at least for the installer)
  - no longer change the config file on upgrade.  Though we will for install and freshen.
  - Now install default theme from a zip file into the /assets/simplex directory (hardcoded)
  - Now install default content from an XML file exported by CGCU

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

FileManager v1.6.4
  - modified to use CMS_ROOT_URL