@@ -562,8 +562,8 @@ final class CmsApp {
         $age_days = max(-1,(int) $age_days);
 		global $CMS_LOGIN_PAGE, $CMS_INSTALL_PAGE;
 		if( !defined('TMP_CACHE_LOCATION') ) return;
-        	$age_days = max(0,(int)$age_days);
-        	\CMSMS\HookManager::do_hook('clear_cached_files', [ 'older_than' => $age_days ]);
+        $age_days = max(0,(int)$age_days);
+        \CMSMS\HookManager::do_hook('clear_cached_files', [ 'older_than' => $age_days ]);
 		$the_time = time() - $age_days * 24*60*60;
 
 		$dirs = array(TMP_CACHE_LOCATION,PUBLIC_CACHE_LOCATION,TMP_TEMPLATES_C_LOCATION);
@@ -573,8 +573,10 @@ final class CmsApp {
 			foreach( $dirContents as $one ) {
 				if( $one->isFile() && $one->getMTime() <= $the_time ) @unlink($one->getPathname());
 			}
-            		@touch(cms_join_path($start_dir,'index.html'));
+            @touch(cms_join_path($start_dir,'index.html'));
 		}
+
+        HookManager::do_hook( 'Core::OnCacheClear', $the_time )
 	}
 
 	/**
