@@ -406,7 +406,7 @@ class UserOperations
 	public function IsSuperuser($uid)
 	{
 		if( $uid == 1 ) return TRUE;
-		$groups = $this->GetMemberGroups();
+		$groups = $this->GetMemberGroups($uid);
 		if( is_array($groups) && count($groups) ) {
 			if( in_array($uid,$groups) ) return TRUE;
 		}
